--- a/3.Python_Loop.ipynb
+++ b/3.Python_Loop.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -159,8 +159,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3*3 = 3\n",
-      "3*3 = 6\n",
       "3*3 = 9\n"
      ]
     }
@@ -172,7 +170,7 @@
     "while (itersLeft != 0):\n",
     "    ans = ans + x\n",
     "    itersLeft = itersLeft - 1\n",
-    "    print str(x) + '*' + str(x) + ' = ' + str(ans) "
+    "print str(x) + '*' + str(x) + ' = ' + str(ans) "
    ]
   },
   {
@@ -184,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -263,12 +261,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input any number : 3\n",
-      "Input any number : 4\n",
       "Input any number : 1\n",
+      "Input any number : 4\n",
       "Input any number : 5\n",
-      "Input any number : 6\n",
-      "19.0\n"
+      "Input any number : 7\n",
+      "Input any number : 3\n",
+      "20.0\n"
      ]
     }
    ],
@@ -299,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -308,9 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = 4 : x is not a power of 2\n",
-      "x = 2 : x is not a power of 2\n",
-      "x = 1 : x is a power of 2\n"
+      "x is a power of 2\n"
      ]
     }
    ],
@@ -319,11 +315,10 @@
     "while x%2 == 0:\n",
     "    x = x/2\n",
     "    if x == 1:\n",
-    "        print \"x = \" + str(x) + \" : x is a power of 2\"\u000b",
-    "\n",
+    "        print \"x is a power of 2\"\n",
     "        break\n",
-    "    else:\n",
-    "        print \"x = \" + str(x) + \" : x is not a power of 2\""
+    "else:\n",
+    "    print \"x is not a power of 2\""
    ]
   },
   {
@@ -353,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -423,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -462,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -553,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +559,7 @@
        "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -612,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -623,7 +618,7 @@
        "[2, 3, 4, 5]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -645,7 +640,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -667,7 +662,7 @@
        "[4, 6, 8]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -689,7 +684,7 @@
        "[0, -2, -4, -6]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,9 +704,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -790,15 +786,6 @@
     "        else:\n",
     "            print num, 'is a prime number'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
