--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -8,13 +8,15 @@
     "\n",
     "* Python 프로그램의 소스 코드는 일련의 정의와 명령문으로 구성된다.\n",
     "\n",
-    "* Python 스크립트(script)라고도 불림.\n",
+    "* Python 프로그램이나 소느 코드는 스크립트(script)라고도 불림.\n",
     "\n",
     "* 프로그램을 작성하는 사람이 command 혹은 statement라고 불리는 문장들을 작성하여, 이 문장들을 통해 Python 인터프리터가 프로그램 작성자의 목적에 맞는 일을 하도록 지시한다.\n",
     "\n",
     "* 다음은 print 문장을 이용한 간단한 프로그램이다.\n",
     "\n",
-    " * In [1]: 의 오른쪽의 내용이 우리가 작성하는 프로그램의 내용이며 그 다음 줄의 내용이 프로그램의 실행 결과이다."
+    " * In [1]: 의 오른쪽의 내용이 우리가 작성하는 프로그램의 내용이며 그 다음 줄의 내용이 프로그램의 실행 결과이다.\n",
+    " \n",
+    "* 이 자료는 Python 2.7을 기준으로 작성되었다."
    ]
   },
   {
@@ -40,7 +42,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "만약 Spyder를 이용 중이라면, Spyder 오른쪽 하단의 IPython Console을 이용하여 위의 문장을 실행시켜 보자.  \n",
+    "만약 Spyder를 이용 중이라면, Spyder 오른쪽 하단의 IPython Console을 이용하여 위의 문장을 실행시켜 보자.\n",
+    "Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경이다.\n",
     "아래 그림의 In [1]: 오른쪽 부분에 print 'This is my first Python program.' 를 입력하고 엔터를 입력한다.\n",
     "\n",
     "![alt tag](https://github.com/ksublee/spup/blob/master/figure/console.png?raw=true)"
@@ -368,12 +371,14 @@
    "source": [
     "### 변수\n",
     "\n",
+    "* 계산을 하다보면 특정 변수를 생성하여 값을 지정하고 변수를 통하여 수식을 계산하는 것이 더 편리할 경우가 많다. \n",
     "* 수학에서 x=10과 같이 변수와 그 값을 지정하듯이 Python에서도 등호(=)를 이용하여 변수의 값을 지정한다.  \n",
-    "* 변수의 이름, 변수명은 기본적인 규칙을 지키는 선에서 마음대로 지어주면 된다.  \n",
+    "* 변수의 이름, 변수명은 기본적인 규칙을 지키는 선에서 마음대로 지어주면 된다. \n",
+    "   * 이 규칙에 대해서는 잠시 후에 살펴본다.\n",
     "* 대입 연산에서는 반드시 왼쪽에 변수명이 등장한다.\n",
     "\n",
-    "\n",
-    "* 정수형 변수 지정"
+    "* 정수형 변수 지정\n",
+    " * 다음을 'my_integer는 10과 같다'고 해석을 해서는 안 된다. 'my_integer에 10을 대입한다'와 같이 해석한다."
    ]
   },
   {
@@ -459,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 위의 예제처럼 대입 연산의 오른쪽에는 상수값이 오거나, 기존의 변수 혹은 기존의 변수를 이용한 식 등이 올 수 있다."
+    "* 위의 예제들처럼 대입 연산의 오른쪽에는 상수값이 오거나, 다음의 예제처럼 기존의 변수 혹은 기존의 변수를 이용한 식 등이 올 수 있다."
    ]
   },
   {
@@ -493,7 +498,7 @@
     "   * apartmentname -> apartment_name 혹은 apartmentName\n",
     " * 무슨 변수를 나타내는지 알아보도록 짓는다.\n",
     "   * afmowpv : 아무 의미 없어 보이며 이렇게 짓지 않음\n",
-    "   * average_num_students : 학생 수의 평균을 의미하는 것을 알 수 있음\n"
+    "   * average_num_students : 변수명이 다소 긴 것처럼 느껴지지만, 학생 수의 평균을 의미하는 변수 임을 추측할 수 있음\n"
    ]
   },
   {
@@ -502,7 +507,7 @@
    "source": [
     "### 변수 지정에 있어 Python의 특징\n",
     "\n",
-    "* 많은 다른 프로그래밍 언어의 경우 변수형을 따로 선언해 주어야 함. 예를 들어,\n",
+    "* 많은 다른 프로그래밍 언어의 경우 변수형을 따로 선언해 주어야 함. 예를 들어, C언어 등의 경우\n",
     "  * int n = 10\n",
     "    * 정수(integer)형 변수\n",
     "  * double x = 2.12\n",
@@ -517,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dynamic types\n",
+    "#### Dynamic types\n",
     "\n",
     "* Python에서는 데이터 type을 따로 명시하는 것이 아니기 때문에, 프로그램 중간에 데이터 type이 바뀔 수 있다.\n",
     "  * x = 10  \n",
@@ -528,6 +533,7 @@
     "    \n",
     "    \n",
     "* 그러나, 하나의 변수가 한 프로그램 내에서 데이터 타입이 변하는 것은 바람직하지 않으며, 동일한 데이터 타입을 유지하도록 한다.\n",
+    "\n",
     "* 반면 변수의 값은 계속 변할 수 있다.\n"
    ]
   },
@@ -535,9 +541,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 변수 재지정\n",
+    "#### 변수값 재지정\n",
     "\n",
-    "한 번 지정한 변수값을 얼마든지 새 변수로 바꿀 수 있음 \n"
+    "한 번 지정한 변수값을 얼마든지 새 변수값으로 바꿀 수 있음 \n"
    ]
   },
   {
@@ -593,9 +599,9 @@
     "collapsed": true
    },
    "source": [
-    "### multiple assignment\n",
+    "#### multiple assignment\n",
     "\n",
-    "Python에서는 다음과 같이 여러 개의 변수에 한 번에 값들을 지정할 수 있다."
+    "Python에서는 다음과 같이 여러 개의 변수에 여러 값들을 한 번에 지정할 수 있다."
    ]
   },
   {
@@ -625,9 +631,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 문자열 출력해보기\n",
+    "### 문자열 출력해 보기\n",
     "\n",
-    "프로그래밍의 가장 기본 예제를 연습해 보자."
+    "프로그래밍의 가장 기본 예제를 연습해 보자. Python은 인터프리터 언어로서 매우 간단한 Hello world 프로그램을 가진다."
    ]
   },
   {
@@ -672,15 +678,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "따옴표로 둘러싸여 있는 부분은 문자열을 의미\n",
+    "따옴표로 둘러싸여 있는 부분은 문자열을 의미하며 print 명령을 통해 해당 문자열 - 여기서는 Hello, world! - 을 화면에 출력하라는 뜻이다.\n",
     "* 큰 따옴표, 작은 따옴표 모두 가능\n",
     "\n",
-    "print 명령에 괄호를 사용할 수도 있음"
+    "print 명령에 괄호를 사용할 수도 있음\n",
+    "* Python 3.0 이상에서는 print가 함수로 변경되었기 때문에, 반드시 괄호를 이용해야 한다.\n",
+    "* https://docs.python.org/3/whatsnew/3.0.html#print-is-a-function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -760,7 +768,7 @@
    "source": [
     "### 부울(Boolean)형\n",
     "\n",
-    "* True or False\n",
+    "* True 혹은 False로 구성된 자료형이다.\n",
     "* Boolean type의 변수는 프로그래밍에서 중요한 역할을 담당\n",
     "  * 조건에 따라 처리를 달리하는 프로그램을 작성할 때 유용\n"
    ]
@@ -968,6 +976,11 @@
     "### 비교연산\n",
     "\n",
     "비교연산의 종류\n",
+    "\n",
+    "----------|--------------\n",
+    "비교연산자  |대응되는 수학기호\n",
+    "------------------------------\n",
+    "\n",
     "\n",
     "![alt tag](https://github.com/ksublee/spup/blob/master/figure/compare.png?raw=true)\n",
     "\n",
@@ -1918,7 +1931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
