--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -977,12 +977,16 @@
     "\n",
     "비교연산의 종류\n",
     "\n",
-    "----------|--------------\n",
+    "\n",
     "비교연산자  |대응되는 수학기호\n",
-    "------------------------------\n",
+    "----------|--------------\n",
+    "> | $>$\n",
+    ">= | $\\geq$\n",
+    "< | $<$\n",
+    "<= | $\\leq$\n",
+    "!= | $\\neq$\n",
+    "== | $=$\n",
     "\n",
-    "\n",
-    "![alt tag](https://github.com/ksublee/spup/blob/master/figure/compare.png?raw=true)\n",
     "\n",
     "비교연산자를 사용한 식이 옳을 경우 True를, 그렇지 않을 경우 False를 반환"
    ]
