--- a/9.Probability.ipynb
+++ b/9.Probability.ipynb
@@ -18,7 +18,9 @@
     "### 조건부 확률\n",
     "\n",
     "* 만약 사건 $E$와 $F$가 독립이 아닐 수 있으면, 다음과 같이 조건부 확률을 정의\n",
-    "$$𝑃(𝐸|𝐹)=\\frac{𝑃(𝐸,𝐹)}{𝑃(𝐹)}$$ \n",
+    "\\begin{aligned}\n",
+    "𝑃(𝐸|𝐹)=\\frac{𝑃(𝐸,𝐹)}{𝑃(𝐹)}\n",
+    "\\end{aligned}\n",
     "* 사건 $𝐹$가 발생하였을 때, $𝐸$가 발생할 확률\n",
     "\n",
     "### Example\n",
