--- a/9.Probability.ipynb
+++ b/9.Probability.ipynb
@@ -18,9 +18,11 @@
     "### 조건부 확률\n",
     "\n",
     "* 만약 사건 $E$와 $F$가 독립이 아닐 수 있으면, 다음과 같이 조건부 확률을 정의\n",
+    "\n",
     "\\begin{aligned}\n",
     "𝑃(𝐸|𝐹)=\\frac{𝑃(𝐸,𝐹)}{𝑃(𝐹)}\n",
     "\\end{aligned}\n",
+    "\n",
     "* 사건 $𝐹$가 발생하였을 때, $𝐸$가 발생할 확률\n",
     "\n",
     "### Example\n",
@@ -29,8 +31,13 @@
     "* 각 자녀는 같은 확률로 남자 혹은 여자일 수 있다.\n",
     "* 둘째의 성별은 첫째의 성별과 독립적이다.\n",
     "* 첫째가 딸(G)일 때, 두 자녀가 모두 딸(B)일 확률?\n",
-    "$$𝑃(𝐵|𝐺)=\\frac{𝑃(𝐵,𝐺)}{𝑃(𝐺)} = \\frac{𝑃(𝐵)}{𝑃(𝐺)} = \\frac{1}{2}$$\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "𝑃(𝐵|𝐺)=\\frac{𝑃(𝐵,𝐺)}{𝑃(𝐺)} = \\frac{𝑃(𝐵)}{𝑃(𝐺)} = \\frac{1}{2}\n",
+    "\\end{aligned}\n",
+    "\n",
     "* 적어도 하나의 아이가 딸일 때(L), 두 아이가 모두 딸(B)일 확률?\n",
+    "\n",
     "$$𝑃(𝐵|𝐿)=\\frac{𝑃(𝐵,𝐿)}{𝑃(𝐿)} = \\frac{𝑃(𝐵)}{𝑃(𝐿)} = \\frac{1}{3} $$\n",
     "  \n",
     "### 랜덤 가족을 만들어 결과 확인"
