--- a/9.Probability.ipynb
+++ b/9.Probability.ipynb
@@ -23,6 +23,13 @@
     "𝑃(𝐸|𝐹)=\\frac{𝑃(𝐸,𝐹)}{𝑃(𝐹)}\n",
     "\\end{aligned}\n",
     "\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{x} & = \\sigma(y-x) \\\\\n",
+    "\\dot{y} & = \\rho x - y - xz \\\\\n",
+    "\\dot{z} & = -\\beta z + xy\n",
+    "\\end{aligned}\n",
+    "\n",
     "* 사건 $𝐹$가 발생하였을 때, $𝐸$가 발생할 확률\n",
     "\n",
     "### Example\n",
