--- a/9.Probability.ipynb
+++ b/9.Probability.ipynb
@@ -19,9 +19,13 @@
     "\n",
     "* 만약 사건 $E$와 $F$가 독립이 아닐 수 있으면, 다음과 같이 조건부 확률을 정의\n",
     "\n",
-    "\\begin{aligned}\n",
+    "\\begin{equation*}\n",
     "𝑃(𝐸|𝐹)=\\frac{𝑃(𝐸,𝐹)}{𝑃(𝐹)}\n",
-    "\\end{aligned}\n",
+    "\\end{equation\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\left( \\sum_{k=1}^n a_k b_k \\right)^2 \\leq \\left( \\sum_{k=1}^n a_k^2 \\right) \\left( \\sum_{k=1}^n b_k^2 \\right)\n",
+    "\\end{equation*}\n",
     "\n",
     "\n",
     "\\begin{aligned}\n",
