--- a/9.Probability.ipynb
+++ b/9.Probability.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "* 만약 사건 $E$와 $F$가 독립이 아닐 수 있으면, 다음과 같이 조건부 확률을 정의\n",
     "\n",
-    "\\begin{equation*}\n",
-    "P(E|F) = \\frac{P(E,F)}{P(F)}\n",
-    "\\end{equation*}\n",
+    "$$\n",
+    "P(E|F)P(E|F) = \\frac{P(E,F)}{P(F)}\n",
+    "$$\n",
     "\n",
     "* 사건 $F$가 발생하였을 때, $E$가 발생할 확률\n",
     "\n",
@@ -32,9 +32,9 @@
     "* 둘째의 성별은 첫째의 성별과 독립적이다.\n",
     "* 첫째가 딸(G)일 때, 두 자녀가 모두 딸(B)일 확률?\n",
     "\n",
-    "\\begin{aligned}\n",
-    "𝑃(𝐵|𝐺)=\\frac{𝑃(𝐵,𝐺)}{𝑃(𝐺)} = \\frac{𝑃(𝐵)}{𝑃(𝐺)} = \\frac{1}{2}\n",
-    "\\end{aligned}\n",
+    "$$\n",
+    "P(B|G) = \\frac{P(B,G)}{P(G)} = \\frac{B}{G} = \\frac{1}{2}\n",
+    "$$\n",
     "\n",
     "* 적어도 하나의 아이가 딸일 때(L), 두 아이가 모두 딸(B)일 확률?\n",
     "\n",
