--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -780,7 +780,7 @@
     }
    ],
    "source": [
-    "2>0.9"
+    "2 > 0.9"
    ]
   },
   {
@@ -800,7 +800,7 @@
     }
    ],
    "source": [
-    "3<-3"
+    "3 < -3"
    ]
   },
   {
@@ -886,7 +886,7 @@
     }
    ],
    "source": [
-    "4==4"
+    "4 == 4"
    ]
   },
   {
@@ -927,9 +927,9 @@
    "outputs": [],
    "source": [
     "x = 2\n",
-    "x = x+4\n",
-    "x = x*x\n",
-    "x = x%5"
+    "x = x + 4\n",
+    "x = x * x\n",
+    "x = x % 5"
    ]
   },
   {
@@ -946,7 +946,7 @@
     }
    ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -979,8 +979,8 @@
    },
    "outputs": [],
    "source": [
-    "egg=138\n",
-    "spam=370"
+    "egg = 138\n",
+    "spam = 370"
    ]
   },
   {
@@ -1126,7 +1126,7 @@
     }
    ],
    "source": [
-    "print name"
+    "print(name)"
    ]
   },
   {
@@ -1161,7 +1161,7 @@
     }
    ],
    "source": [
-    "print age"
+    "print(age)"
    ]
   },
   {
@@ -1236,7 +1236,7 @@
     }
    ],
    "source": [
-    "'a'+'bcde'"
+    "'a' + 'bcde'"
    ]
   },
   {
@@ -1256,7 +1256,7 @@
     }
    ],
    "source": [
-    "5*'ab'"
+    "5 * 'ab'"
    ]
   },
   {
@@ -1277,7 +1277,7 @@
     }
    ],
    "source": [
-    "3+'three'"
+    "3 + 'three'"
    ]
   },
   {
@@ -1348,7 +1348,7 @@
     }
    ],
    "source": [
-    "3+4"
+    "3 + 4"
    ]
   },
   {
@@ -1368,7 +1368,7 @@
     }
    ],
    "source": [
-    "\"ab\"+\"cd\""
+    "\"ab\" + \"cd\""
    ]
   },
   {
@@ -1491,7 +1491,7 @@
     }
    ],
    "source": [
-    "print '\\\"'"
+    "print('\\\"')"
    ]
   },
   {
@@ -1508,7 +1508,7 @@
     }
    ],
    "source": [
-    "print '\\\\'"
+    "print('\\\\')"
    ]
   },
   {
@@ -1536,7 +1536,7 @@
    ],
    "source": [
     "first_letter = \"uncopywritable\"[0]\n",
-    "print first_letter"
+    "print(first_letter)"
    ]
   },
   {
@@ -1555,7 +1555,7 @@
    "source": [
     "my_word = \"uncopywritable\"\n",
     "second_letter = my_word[1]\n",
-    "print second_letter"
+    "print(second_letter)"
    ]
   },
   {
@@ -1583,7 +1583,7 @@
    ],
    "source": [
     "my_name = \"KS Lee\"\n",
-    "print len(my_name)"
+    "print( len(my_name) )"
    ]
   },
   {
@@ -1610,7 +1610,7 @@
     }
    ],
    "source": [
-    "print \"EGG\".lower()"
+    "print(\"EGG\".lower())"
    ]
   },
   {
@@ -1628,7 +1628,7 @@
    ],
    "source": [
     "my_string = \"spam\"\n",
-    "print my_string.upper()"
+    "print(my_string.upper())"
    ]
   },
   {
@@ -1691,7 +1691,7 @@
     }
    ],
    "source": [
-    "print this_year + this_year"
+    "print(this_year + this_year)"
    ]
   },
   {
@@ -1708,7 +1708,7 @@
     }
    ],
    "source": [
-    "print this_year_string + this_year_string"
+    "print(this_year_string + this_year_string)"
    ]
   },
   {
@@ -1743,7 +1743,7 @@
    "source": [
     "name = \"Tom\"\n",
     "home = \"New York\"\n",
-    "print \"My name is %s and I am from %s.\" %(name, home)"
+    "print(\"My name is %s and I am from %s.\" %(name, home))"
    ]
   },
   {
@@ -1787,7 +1787,7 @@
     }
    ],
    "source": [
-    "print 'Are you really ' + name + '?'"
+    "print('Are you really ' + name + '?')"
    ]
   },
   {
@@ -1831,7 +1831,7 @@
    ],
    "source": [
     "sqr = float(num)*float(num)\n",
-    "print 'The square of num ' + num + ' is ' + str(sqr)"
+    "print('The square of num ' + num + ' is ' + str(sqr)"
    ]
   }
  ],
