--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -1207,7 +1207,7 @@
     }
    ],
    "source": [
-    "print \"My age is \" + str(20) + \".\""
+    "print(\"My age is \" + str(20) + \".\")"
    ]
   },
   {
