--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -1190,7 +1190,7 @@
     "first_name = \"Kyungsub\"\n",
     "family_name = \"Lee\"\n",
     "full_name = first_name + \" \" + family_name\n",
-    "print full_name"
+    "print(full_name)"
    ]
   },
   {
