--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
     }
    ],
    "source": [
-    "input_string = raw_input(\"Input any string : \")"
+    "input_string = input(\"Input any string : \")"
    ]
   },
   {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1752,13 +1752,13 @@
    "source": [
     "### 문자열 입력\n",
     "\n",
-    "Python 2.x 에서는 raw_input 함수를 이용하여 문자열을 입력받는다.  \n",
-    "raw_input()의 괄호 안에는 문자열 입력 전 화면에 보여주고 싶은 문장을 입력한다."
+    "Python 3.x 에서는 input 함수를 이용하여 문자열을 입력받는다.  \n",
+    "input()의 괄호 안에는 문자열 입력 전 화면에 보여주고 싶은 문장을 입력한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1770,12 +1770,12 @@
     }
    ],
    "source": [
-    "name = raw_input('Enter your name: ')"
+    "name = input('Enter your name: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1813,26 +1813,37 @@
     }
    ],
    "source": [
-    "num = raw_input('Input any number: ')"
+    "num = input('Input any number: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The square of num 3.3 is 10.89\n"
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-cb11eef0197a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msqr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'The square of num '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' is '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msqr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: "
      ]
     }
    ],
    "source": [
     "sqr = float(num)*float(num)\n",
-    "print('The square of num ' + num + ' is ' + str(sqr)"
+    "print('The square of num ' + num + ' is ' + str(sqr))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
