--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -1817,6 +1817,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "num은 문자열이지만 float(num)을 통해서 실수로, 혹은 int(num)을 통해서 정수로 바꿀 수 있다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
