--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -1646,14 +1646,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name: \n"
+      "Enter your name: Kyungsub Lee\n"
      ]
     }
    ],
@@ -1663,14 +1663,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Are you really ?\n"
+      "Are you really Kyungsub Lee?\n"
      ]
     }
    ],
@@ -1689,14 +1689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input any number: \n"
+      "Input any number: 1.1\n"
      ]
     }
    ],
@@ -1713,20 +1713,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-82-cb11eef0197a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msqr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'The square of num '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' is '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msqr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square of num 1.1 is 1.2100000000000002\n"
      ]
     }
    ],
@@ -1734,6 +1730,13 @@
     "sqr = float(num)*float(num)\n",
     "print('The square of num ' + num + ' is ' + str(sqr))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
