--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -25,9 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def square_plus_one(x):\n",
@@ -49,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -80,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def my_sqrt(x):\n",
@@ -109,10 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -123,15 +115,13 @@
     }
    ],
    "source": [
-    "print my_sqrt(2) "
+    "print(my_sqrt(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -143,15 +133,13 @@
    ],
    "source": [
     "y = 16 \n",
-    "print my_sqrt(y)"
+    "print(my_sqrt(y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -163,15 +151,13 @@
    ],
    "source": [
     "z = 12 \n",
-    "print my_sqrt(z*12)"
+    "print(my_sqrt(z*12))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -183,7 +169,7 @@
    ],
    "source": [
     "x = my_sqrt(100) \n",
-    "print x*x"
+    "print(x*x)"
    ]
   },
   {
@@ -197,14 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_something():\n",
-    "    print \"This function does nothing.\""
+    "    print(\"This function does nothing.\")"
    ]
   },
   {
@@ -218,10 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -237,10 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### 여러 개의 인자를 받는 함수"
@@ -248,10 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def my_max(x, y):\n",
@@ -263,10 +241,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -274,7 +250,7 @@
        "12"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,10 +270,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def my_GCD(x, y):\n",
@@ -312,10 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -323,7 +295,7 @@
        "12"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,17 +313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def printName(firstName, lastName, reverse):\n",
     "    if reverse:\n",
-    "          print lastName + ', ' + firstName\n",
+    "          print(lastName + ', ' + firstName)\n",
     "    else:\n",
-    "          print firstName, lastName"
+    "          print(firstName, lastName)"
    ]
   },
   {
@@ -363,10 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -395,10 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -411,9 +377,9 @@
    "source": [
     "def printName(firstName, lastName, reverse = False):\n",
     "    if reverse:\n",
-    "         print lastName + ', ' + firstName\n",
+    "         print(lastName + ', ' + firstName)\n",
     "    else:\n",
-    "         print firstName, lastName\n",
+    "         print(firstName, lastName)\n",
     "            \n",
     "printName('Kyungsub', 'Lee')"
    ]
@@ -429,10 +395,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -448,7 +412,7 @@
     "    \n",
     "x = 10\n",
     "my_func()\n",
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -460,10 +424,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -479,15 +441,13 @@
     "    \n",
     "x=1\n",
     "increase(x)\n",
-    "print x"
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -503,15 +463,13 @@
     "    \n",
     "x = 10\n",
     "my_func()\n",
-    "print x"
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -527,15 +485,13 @@
     "    \n",
     "x = 1\n",
     "increase(x)\n",
-    "print x"
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -552,15 +508,13 @@
     "\n",
     "x = 10\n",
     "x = my_func()\n",
-    "print x\n"
+    "print(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -577,7 +531,7 @@
     "\n",
     "x = 1\n",
     "x = increase(x)\n",
-    "print x\n"
+    "print(x)\n"
    ]
   },
   {
@@ -592,10 +546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -610,7 +562,7 @@
     "    y = 20 - x\n",
     "    if 4*x + 2*y == 56:\n",
     "         break\n",
-    "print x, y"
+    "print(x, y)"
    ]
   },
   {
@@ -624,10 +576,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def farm(numHeads, numLegs):\n",
@@ -639,10 +589,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -653,15 +601,13 @@
     }
    ],
    "source": [
-    "print farm(20, 56)"
+    "print(farm(20, 56))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -672,7 +618,7 @@
     }
    ],
    "source": [
-    "print farm(20, 60)"
+    "print(farm(20, 60))"
    ]
   },
   {
@@ -687,10 +633,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -698,7 +642,7 @@
        "[None, None]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,10 +667,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def farm(numHeads, numLegs):\n",
@@ -754,32 +696,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of heads : 10\n",
-      "Enther the number of legs : 30\n",
-      "Number of pigs :  5\n",
-      "Number of chickens :  5\n"
+      "Enter the number of heads : 12\n",
+      "Enther the number of legs : 24\n",
+      "Number of pigs :  0\n",
+      "Number of chickens :  12\n"
      ]
     }
    ],
    "source": [
     "def farm_UI():\n",
-    "    heads = int(raw_input('Enter the number of heads : '))\n",
-    "    legs = int(raw_input('Enther the number of legs : '))\n",
+    "    heads = int(input('Enter the number of heads : '))\n",
+    "    legs = int(input('Enther the number of legs : '))\n",
     "    [pigs, chickens] = farm(heads, legs)\n",
     "    if pigs == None:\n",
-    "          print 'No solution'\n",
+    "          print('No solution')\n",
     "    else:\n",
-    "          print 'Number of pigs : ', pigs\n",
-    "          print 'Number of chickens : ', chickens\n",
+    "          print('Number of pigs : ', pigs)\n",
+    "          print('Number of chickens : ', chickens)\n",
     "        \n",
     "farm_UI()"
    ]
@@ -827,10 +767,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -838,7 +776,7 @@
        "8.426149773176359"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,10 +788,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -861,7 +797,7 @@
        "1.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +812,9 @@
    "source": [
     "### division - 나누기\n",
     "\n",
-    "* Python 2.7에서는 나누기(/)를 사용시 기본적으로 정수를 먼저 반환하려고 함.\n",
+    "* 다음은 Python 3.x에서는 해당되지 않는 내용이다.\n",
+    "\n",
+    "* Python 2.x에서는 나누기(/)를 사용시 기본적으로 정수를 먼저 반환하려고 함.\n",
     "  * 5/2 = 2\n",
     "* 실수 나누기를 하고 싶은 경우\n",
     "  * 5/2.0 혹은 5/float(2)\n",
@@ -886,10 +824,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -897,7 +833,7 @@
        "2.5"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,10 +845,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -920,7 +854,7 @@
        "2"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,18 +882,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4454081159661193"
+       "0.6762294131998526"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,18 +903,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.125949359493178"
+       "1.8447516467769853"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,18 +923,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,18 +943,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3842113716969823"
+       "-0.7165523306675587"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,10 +972,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math \n",
@@ -1063,95 +987,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6226480074305117"
+       "-0.20820980729502514"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "student_t(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 나만의 module 만들기\n",
-    "\n",
-    "* 다음의 스크립트를 fibo.py의 이름으로 현재의 working directory에 저장\n",
-    "  * 나의 working directory 찾는 법 (콘솔에서 실행해보자)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* fibo.py에 저장할 내용"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def fib(n):    # write Fibonacci series up to n\n",
-    "    a, b = 0, 1\n",
-    "    while b < n:\n",
-    "        print b,\n",
-    "        a, b = b, a+b "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* 위 스크립트를 working directory에 저장 후 콘솔에서 다음을 실행해 보자."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1 2 3 5 8 13\n"
-     ]
-    }
-   ],
-   "source": [
-    "import fibo\n",
-    "fibo.fib(20)"
    ]
   },
   {
@@ -1170,18 +1021,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "7"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,18 +1042,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "6"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,18 +1063,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "3"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,23 +1085,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
