--- a/3.Python_Conditional.ipynb
+++ b/3.Python_Conditional.ipynb
@@ -25,25 +25,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Odd\n"
+      "Even\n"
      ]
     }
    ],
    "source": [
     "x=15\n",
     "if (x/2)*2 == x:\n",
-    "    print 'Even'\n",
+    "    print('Even')\n",
     "else:\n",
-    "    print 'Odd'"
+    "    print('Odd')"
    ]
   },
   {
@@ -78,10 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -93,8 +89,8 @@
    ],
    "source": [
     "my_age = 25\n",
-    "if my_age >= 20: print \"get drunk\"\n",
-    "else: print \"not this time\""
+    "if my_age >= 20: print(\"get drunk\")\n",
+    "else: print(\"not this time\")"
    ]
   },
   {
@@ -106,10 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -123,22 +117,20 @@
    "source": [
     "my_status = 'dirty'\n",
     "if my_status == 'dirty':\n",
-    "    print \"take a shower\"\n",
-    "    print \"do a laundry\""
+    "    print(\"take a shower\")\n",
+    "    print(\"do a laundry\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "my_status = 'clean'\n",
     "if my_status == 'dirty':\n",
-    "    print \"take a shower\"\n",
-    "    print \"do a laundry\""
+    "    print(\"take a shower\")\n",
+    "    print(\"do a laundry\")"
    ]
   },
   {
@@ -154,10 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -168,56 +158,14 @@
     }
    ],
    "source": [
-    "if 3<4: print \"if\"\n",
-    "else: print \"else\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "else\n"
-     ]
-    }
-   ],
-   "source": [
-    "if \"3\"<4: print \"if\"\n",
-    "else: print \"else\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "if\n"
-     ]
-    }
-   ],
-   "source": [
-    "if 3<\"4\": print \"if\"\n",
-    "else: print \"else\""
+    "if 3<4: print(\"if\")\n",
+    "else: print(\"else\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -228,8 +176,8 @@
     }
    ],
    "source": [
-    "if \"3\"<\"4\": print \"if\"\n",
-    "else: print \"else\""
+    "if \"3\"<\"4\": print(\"if\")\n",
+    "else: print(\"else\")"
    ]
   },
   {
@@ -242,9 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -260,10 +206,10 @@
     "z=2\n",
     "if x<y:\n",
     "    if x<z:\n",
-    "        print \"x is the least\"\n",
+    "        print(\"x is the least\")\n",
     "    else:\n",
-    "        print \"z is the least\"\n",
-    "else: print \"y is the least\""
+    "        print(\"z is the least\")\n",
+    "else: print(\"y is the least\")"
    ]
   },
   {
@@ -276,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -292,9 +236,9 @@
     "x=10\n",
     "y=5\n",
     "z=2\n",
-    "if x<y and x<z: print \"x is the least\"\n",
-    "elif y<z: print \"y is the least\"\n",
-    "else: print \"z is the least\""
+    "if x<y and x<z: print(\"x is the least\")\n",
+    "elif y<z: print(\"y is the least\")\n",
+    "else: print(\"z is the least\")"
    ]
   },
   {
@@ -315,9 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -330,11 +272,11 @@
    "source": [
     "if x%2 == 0:\n",
     "    if x%3 == 0:\n",
-    "        print 'Divisible by 2 and 3'\n",
+    "        print('Divisible by 2 and 3')\n",
     "    else:\n",
-    "        print 'Divisible by 2 and not by 3'\n",
+    "        print('Divisible by 2 and not by 3')\n",
     "elif x%3 == 0:\n",
-    "    print 'Divisible by 3 and not by 2'"
+    "    print('Divisible by 3 and not by 2')"
    ]
   },
   {
@@ -355,10 +297,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -366,7 +306,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,10 +317,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -394,15 +352,13 @@
     }
    ],
    "source": [
-    "True and False"
+    "False and True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -416,20 +372,18 @@
     }
    ],
    "source": [
-    "False and True"
+    "False and False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 18,
@@ -438,15 +392,33 @@
     }
    ],
    "source": [
-    "False and False"
+    "True or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -460,59 +432,13 @@
     }
    ],
    "source": [
-    "True or True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "True or False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "False or True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -520,7 +446,7 @@
        "False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,10 +457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -542,7 +466,7 @@
        "False"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,10 +477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -564,7 +486,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,10 +504,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -598,16 +518,14 @@
    "source": [
     "x=3\n",
     "y=7\n",
-    "if x<y and x<0: print \"if\"\n",
-    "else: print \"else\""
+    "if x<y and x<0: print(\"if\")\n",
+    "else: print(\"else\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -620,28 +538,28 @@
    "source": [
     "x=3\n",
     "y=7\n",
-    "if x<y or x<0: print \"if\"\n",
-    "else: print \"else\""
+    "if x<y or x<0: print(\"if\")\n",
+    "else: print(\"else\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
