--- a/3.Python_Loop.ipynb
+++ b/3.Python_Loop.ipynb
@@ -14,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -32,7 +30,7 @@
     "while j>0:\n",
     "    x += 5\n",
     "    j -= 1\n",
-    "print x "
+    "print(x)"
    ]
   },
   {
@@ -65,7 +63,7 @@
    "source": [
     "j = 3\n",
     "while j>0:\n",
-    "    print \"Hello world\""
+    "    print(\"Hello world\")"
    ]
   },
   {
@@ -79,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -97,7 +93,7 @@
     "j = 3\n",
     "while j>0:\n",
     "    j -= 1\n",
-    "    print \"Hello world\""
+    "    print(\"Hello world\")"
    ]
   },
   {
@@ -110,9 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -130,7 +124,7 @@
     "while j>0:\n",
     "    x += 5\n",
     "    j -= 1\n",
-    "    print x "
+    "    print(x)"
    ]
   },
   {
@@ -151,9 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -170,7 +162,7 @@
     "while (itersLeft != 0):\n",
     "    ans = ans + x\n",
     "    itersLeft = itersLeft - 1\n",
-    "print str(x) + '*' + str(x) + ' = ' + str(ans) "
+    "print(str(x) + '*' + str(x) + ' = ' + str(ans))"
    ]
   },
   {
@@ -183,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -204,7 +194,7 @@
     "    while y>0:\n",
     "        counter += 1\n",
     "        y -= 1\n",
-    "print counter"
+    "print(counter)"
    ]
   },
   {
@@ -220,9 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -238,7 +226,7 @@
     "    count += 1\n",
     "    if count >= 10:\n",
     "        break\n",
-    "print count"
+    "print(count)"
    ]
   },
   {
@@ -252,21 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Input any number : 1\n",
+      "Input any number : 2\n",
+      "Input any number : 3\n",
       "Input any number : 4\n",
       "Input any number : 5\n",
-      "Input any number : 7\n",
-      "Input any number : 3\n",
-      "20.0\n"
+      "15.0\n"
      ]
     }
    ],
@@ -274,10 +260,10 @@
     "counter = 5\n",
     "summation = 0\n",
     "while counter > 0:\n",
-    "    num = raw_input(\"Input any number : \") \n",
+    "    num = input(\"Input any number : \") \n",
     "    summation += float(num)\n",
     "    counter -= 1\n",
-    "print summation"
+    "print(summation)"
    ]
   },
   {
@@ -297,10 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -315,10 +299,10 @@
     "while x%2 == 0:\n",
     "    x = x/2\n",
     "    if x == 1:\n",
-    "        print \"x is a power of 2\"\n",
+    "        print(\"x is a power of 2\")\n",
     "        break\n",
     "else:\n",
-    "    print \"x is not a power of 2\""
+    "    print(\"x is not a power of 2\")"
    ]
   },
   {
@@ -348,10 +332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -366,7 +348,7 @@
     "ans = 0\n",
     "while ans*ans <= x:\n",
     "    ans = ans + 1\n",
-    "print ans"
+    "print(ans)"
    ]
   },
   {
@@ -380,16 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.2426\n"
+      "4.242599999999998\n"
      ]
     }
    ],
@@ -404,7 +384,7 @@
     "    elif ans**2>x:\n",
     "        ans -= increment\n",
     "        increment = increment/10.0\n",
-    "print ans"
+    "print(ans)"
    ]
   },
   {
@@ -418,10 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -444,7 +422,7 @@
     "divisor = 1\n",
     "while divisor <= 100:\n",
     "    if x % divisor == 0:\n",
-    "        print divisor\n",
+    "        print(divisor)\n",
     "    divisor += 1"
    ]
   },
@@ -457,10 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -475,7 +451,7 @@
    ],
    "source": [
     "for x in [1,2,3,4]:\n",
-    "    print x"
+    "    print(x)"
    ]
   },
   {
@@ -492,10 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -512,15 +486,20 @@
    ],
    "source": [
     "for character in \"python\":\n",
-    "    print character"
+    "    print(character)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다음의 range() 함수 사용 결과는 0 이상 5미만의 숫자 리스트를 나타낸다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -536,36 +515,7 @@
    ],
    "source": [
     "for j in range(0,5):\n",
-    "    print j"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "다음의 range() 함수 사용 결과는 0 이상 5미만의 숫자 리스트를 나타낸다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "range(0,5)"
+    "    print(j)"
    ]
   },
   {
@@ -577,10 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -595,102 +543,99 @@
     "reversed_string = \"\"\n",
     "for s in string:\n",
     "    reversed_string  = s + reversed_string \n",
-    "print reversed_string"
+    "print(reversed_string)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### range()의 다양한 활용"
+    "#### range()의 다양한 활용\n",
+    "\n",
+    "Python 2의 range()와 Python 3의 range()는 약간의 차이가 있으나 그 용법은 거의 비슷하다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
     }
    ],
    "source": [
-    "range(2,6)"
+    "for j in range(2,6): print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
+     ]
     }
    ],
    "source": [
-    "range(8)"
+    "for j in range(8): print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[4, 6, 8]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
     }
    ],
    "source": [
-    "range(4,10,2)"
+    "for j in range(4,10,2): print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, -2, -4, -6]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-2\n",
+      "-4\n",
+      "-6\n"
+     ]
     }
    ],
    "source": [
-    "range(0,-8,-2)"
+    "for j in range(0,-8,-2): print(j)"
    ]
   },
   {
@@ -699,14 +644,15 @@
    "source": [
     "예제\n",
     "\n",
+    "다음은 소수를 찾는 프로그래미이다.\n",
+    "\n",
     "다음의 코드는 약간의 수정이 필요하다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -781,30 +727,37 @@
     "    for i in range(2, num): \n",
     "        if num%i == 0:      \n",
     "            j=num/i\n",
-    "            print '%d equals %d * %d' % (num,i,j)\n",
+    "            print('%d equals %d * %d' % (num,i,j))\n",
     "            break\n",
     "        else:\n",
-    "            print num, 'is a prime number'"
+    "            print(num, 'is a prime number')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
