--- a/3.Python_Loop.ipynb
+++ b/3.Python_Loop.ipynb
@@ -270,6 +270,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "다음 코드는 입력된 문자열을 출력하는 단순 프로그램이며 q를 입력하여 빠져나올 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If type q, you can quit : a\n",
+      "You just typed : a\n",
+      "If type q, you can quit : v\n",
+      "You just typed : v\n",
+      "If type q, you can quit : q\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    inpt = input(\"If type q, you can quit : \")\n",
+    "    if inpt == 'q':\n",
+    "        break\n",
+    "    else: print(\"You just typed :\", inpt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### while/else\n",
     "\n",
     "Python에 있는 독특한 문법    \n",
@@ -644,7 +676,7 @@
    "source": [
     "예제\n",
     "\n",
-    "다음은 소수를 찾는 프로그래미이다.\n",
+    "다음은 소수를 찾는 프로그램이다.\n",
     "\n",
     "다음의 코드는 약간의 수정이 필요하다."
    ]
@@ -731,6 +763,102 @@
     "            break\n",
     "        else:\n",
     "            print(num, 'is a prime number')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 연습문제\n",
+    "\n",
+    "* 1500에서 2700사이의 숫자 중에서 7로 나누어 떨어지고, 5의 배수인 모든 숫자를 출력하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 다음 패턴을 출력하는 프로그램을 작성하라.\n",
+    "\n",
+    "@ \n",
+    "\n",
+    "@ @ \n",
+    "\n",
+    "@ @ @ \n",
+    "\n",
+    "@ @ @ @ \n",
+    "\n",
+    "@ @ @ @ @  \n",
+    "\n",
+    "@ @ @ @ \n",
+    "\n",
+    "@ @ @\n",
+    "\n",
+    "@ @ \n",
+    "\n",
+    "@"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 입력받은 숫자의 약수를 모두 출력하는 프로그램을 만들어라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 1부터 100까지 숫자 중 약수의 개수가 5개인 숫자를 모두 찾는 프로그램을 작성하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 자신을 제외한 모든 약수들의 총합이 자기 자신이 되는 수를 완전수라고 한다. 1이상 1000이하의 모든 완전수를 출력하는 프로그램을 작성하라.\n",
+    "  * 예: 6의 약수는 1,2,3,6이며 1+2+3=6이므로 완전수이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 메르센 수(Mersenne number)는 2의 거듭제곱에서 1이 모자란 숫자를 가리킨다.\n",
+    "   * 즉 $2^n-1$의 형태로 나타난다.\n",
+    "   * $3 = 2^2-1$ 이므로 메르센 수이다.\n",
+    "* 1부터 1000까지의 숫자 중 메르센 숫자를 모두 찾는 프로그램을 작성하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 메르센 소수는 메르센 수이면서 소수인 숫자를 나타낸다. 1부터 1000까지의 숫자 중 메르센 소수를 모두 찾는 프로그램을 작성하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 거꾸로 해도 똑같은 숫자를 palindrom이라 한다. 1부터 200까지의 숫자 중 palindrom이면서 소수인 수를 모두 찾는 프로그램을 작성하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 다음 방정식의 해는 모두 양의 정수로 이루어져있다고 한다. 모든 정수해를 찾아라.\n",
+    "  * $x^5 - 25 x^4 + 227 x^3 - 923 x^2 + 1620 x - 900 = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 다음 방정식의 모든 정수해를 찾아라. 해는 음수일 수도 있음\n",
+    "  * $x^5 - x^4 - 33 x^3 + 61 x^2 + 32 x - 60 = 0$"
    ]
   },
   {
