--- a/5.Python_List_Dictionary.ipynb
+++ b/5.Python_List_Dictionary.ipynb
@@ -938,6 +938,75 @@
    "source": [
     "### 복사의 예 (Cloning)\n",
     "\n",
+    "* Python 언어의 모든 매개 변수는 참조로 전달된다.\n",
+    "* 즉, 함수 내에서 매개 변수가 참조하는 것을 변경하면 변경 내용은 호출 함수 밖에서도 반영된다.\n",
+    "* 이를 pass by reference(참조)라고 한다.\n",
+    "* 다음 예제를 보면 함수 내부에서 변화가 함수 바깥으로 영향을 미치는 것을 볼 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values inside the function:  [10, 20, 30, [1, 2, 3, 4]]\n",
+      "Values outside the function:  [10, 20, 30, [1, 2, 3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def changeme( mylist ):\n",
+    "    mylist.append([1,2,3,4]);\n",
+    "    print(\"Values inside the function: \", mylist)\n",
+    "    return\n",
+    "\n",
+    "mylist = [10,20,30];\n",
+    "changeme( mylist );\n",
+    "print(\"Values outside the function: \", mylist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 만약 이를 원치 않으면, 다음과 같이 복사하여 사용한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values inside the function:  [10, 20, 30, [1, 2, 3, 4]]\n",
+      "Values outside the function:  [10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def changeme( mylist ):\n",
+    "    mylist = mylist[:]\n",
+    "    mylist.append([1,2,3,4]);\n",
+    "    print(\"Values inside the function: \", mylist)\n",
+    "    return\n",
+    "\n",
+    "mylist = [10,20,30];\n",
+    "changeme( mylist );\n",
+    "print(\"Values outside the function: \", mylist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 복사의 예(2)\n",
     "다음의 두 removeDup를 비교해 보자."
    ]
   },
