--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -6,17 +6,42 @@
    "source": [
     "### 함수 - function\n",
     "\n",
+    "* 함수는 하나의 관련 작업을 수행하는 데 사용되는 재사용 가능한 코드 블록이다.\n",
+    "  * 함수는 응용 프로그램의 모듈성을 높이고 코드 재사용 수준을 높인다.\n",
+    "\n",
+    "* Python은 기본적으로 많은 내장 함수를 제공한다.\n",
     "* 문자열 등을 다루면서 함수를 사용한 경험을 상기해 보자.\n",
     "  * len(\"Python programming\")\n",
     "\n",
     "* 필요에 따라 함수를 생성하여 원하는 기능을 따로 분리하여 사용하는 법을 익혀보자.\n",
     "  * Decomposition and abstraction\n",
     "\n",
-    "* Python에서 제공하는 함수가 아니라 새로운 함수를 만들기 위해서는 다음의 문법을 따른다.\n",
+    "* Python에서 제공하는 함수가 아니라 사용자 정의의 새로운 함수를 만들 수 있다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 함수 정의의 규칙\n",
+    "\n",
+    "* 함수 블록은 키워드 def와 함수 이름 및 괄호()로 시작한다.\n",
+    "\n",
+    "* 모든 입력 매개 변수는 괄호 안에 있어야 한다. 이 괄호 안에 매개 변수를 정의할 수도 있다.\n",
+    "\n",
+    "* 모든 함수 내의 코드 블록은 콜론(:)으로 시작되고 들여쓰기를 하여야 한다.\n",
+    "\n",
+    "* return [expression] 명령문은 함수를 종료하고 호출자에게 표현식을 전달한다. \n",
+    "\n",
     "\n",
     "def function_name(< argument >):   \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;< something to do >\n",
-    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;< something to do >"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 함수 예제\n",
     "\n",
     "* 제곱 후 1을 더해서 반환하는 함수"
@@ -176,14 +201,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 인자를 받지 않는 함수\n",
+    "### 함수의 인자(argument)\n",
     "\n",
     "* 함수는 아무런 인자를 받지 않을 수 있음"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -218,12 +243,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 인자가 필요하지만 함수 호출 시 입력하지 않았을 경우 에러가 발생한다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "printme() missing 1 required positional argument: 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-909177142d6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprintme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'str'"
+     ]
+    }
+   ],
    "source": [
-    "### 여러 개의 인자를 받는 함수"
+    "def printme( str ):\n",
+    "    print(\"Input is :\",str)\n",
+    "    return;\n",
+    "\n",
+    "printme()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 다음과 같이 인자가 어떤 값을 입력받는지 확실히 표현할 수도 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input is : My string\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printme( str ):\n",
+    "    print(\"Input is :\",str)\n",
+    "    return;\n",
+    "\n",
+    "\n",
+    "printme( str = \"My string\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 여러 개의 인자를 받는 함수\n",
+    "\n",
+    "* 함수는 여러 개의 인자를 받을 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  miki\n",
+      "Age:  50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printinfo( name, age ):\n",
+    "    print(\"Name: \", name)\n",
+    "    print(\"Age: \", age)\n",
+    "    return;\n",
+    "\n",
+    "printinfo( age=50, name=\"miki\" )"
    ]
   },
   {
@@ -270,23 +379,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def my_GCD(x, y):\n",
-    "     j = 1\n",
-    "     ans = 1\n",
-    "     while j <= x and j <= y:\n",
-    "           if x%j == 0 and y%j == 0:\n",
-    "                 ans = j\n",
-    "           j += 1\n",
-    "     return ans"
+    "    j = 1\n",
+    "    ans = 1\n",
+    "    while j <= x and j <= y:\n",
+    "        if x%j == 0 and y%j == 0:\n",
+    "            ans = j\n",
+    "        j += 1\n",
+    "    return ans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +404,7 @@
        "12"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -382,6 +491,23 @@
     "         print(firstName, lastName)\n",
     "            \n",
     "printName('Kyungsub', 'Lee')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lee, Kyungsub\n"
+     ]
+    }
+   ],
+   "source": [
+    "printName('Kyungsub', 'Lee', True)"
    ]
   },
   {
