--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -467,7 +467,8 @@
    "source": [
     "### default parameter\n",
     "\n",
-    "* 함수 생성 시 다음과 같이 default parameter를 설정할 수 있다."
+    "* 함수 생성 시 다음과 같이 default parameter를 설정할 수 있다.\n",
+    "* default parameter는 입력값이 따로 없을 때, 미리 설정된 default값을 이용한다."
    ]
   },
   {
@@ -508,6 +509,39 @@
    ],
    "source": [
     "printName('Kyungsub', 'Lee', True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printinfo( name, age = 35 ):\n",
+    "    print(\"Name: \", name)\n",
+    "    print(\"Age: \", age)\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  miki\n",
+      "Age:  50\n",
+      "Name:  miki\n",
+      "Age:  35\n"
+     ]
+    }
+   ],
+   "source": [
+    "printinfo( age=50, name=\"miki\" )\n",
+    "printinfo( name=\"miki\" )"
    ]
   },
   {
