--- a/3.Python_Conditional.ipynb
+++ b/3.Python_Conditional.ipynb
@@ -304,7 +304,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "예제"
+    "#### 예제 \n",
+    "다음의 예제는 ```elif```을 사용하여 보다 간단하게 작성할 수 있다."
    ]
   },
   {
@@ -611,13 +612,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * 킬로미터를 미터로, 미터를 킬로미터로 변환하는 프로그램을 작성하라. 예를 들어 1500m을 입력하면, 1.5km을 출력하고, 2.3km을 입력하면 2300m를 출력하게 하라."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     " * 세 변의 길이를 입력하였을 때, 정삼각형(Equilateral triangle), 이등변삼각형(Isosceles triangle), 일반삼각형(triangle)을 구분하는 프로그램을 작성하라."
    ]
   },
@@ -643,23 +637,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 문자열을 입력받아 소문자는 대문자로, 대문자는 소문자로 바꾸어 주는 프로그램을 작성하라.\n",
-    "  * aBcD 입력 시 -> AbCd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "* 삼각형 세 변의 길이를 입력받아, 직각 삼각형인지 아닌지 판단하는 프로그램을 작성하라."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
