--- a/9.Probability.ipynb
+++ b/9.Probability.ipynb
@@ -33,7 +33,7 @@
     "* 첫째가 딸(G)일 때, 두 자녀가 모두 딸(B)일 확률?\n",
     "\n",
     "$$\n",
-    "P(B|G) = \\frac{P(B,G)}{P(G)} = \\frac{B}{G} = \\frac{1}{2}\n",
+    "P(B|G) = \\frac{P(B,G)}{P(G)} = \\frac{P(B)}{P(G)} = \\frac{1}{2}\n",
     "$$\n",
     "\n",
     "* 적어도 하나의 아이가 딸일 때(L), 두 아이가 모두 딸(B)일 확률?\n",
